--- a/second_page.html
+++ b/second_page.html
@@ -34,37 +34,37 @@
                 </ul>
             </nav>
                 <div id="slider">
-                        <a href="/shoerepair.html" class="shoerepair" >
+                        <a href="/description_page.html" class="shoerepair" >
                         <img class="item"src="/image/shoe.png" alt="">
                         <p class="title">Shoe repair shop</p>
                         <p class="subtitle">Dr.Nelson's shoe repair shop branding</p>
                         </a>
-                        <a href="/shoerepair.html" class="shoerepair" >
+                        <a href="/description_page.html" class="shoerepair" >
                         <img class="item"src="/image/shoe.png" alt="">
                         <p class="title">Shoe repair shop</p>
                         <p class="subtitle">Dr.Nelson's shoe repair shop branding</p>
                         </a>
-                        <a href="/shoerepair.html" class="shoerepair" >
+                        <a href="/description_page.html" class="shoerepair" >
                         <img class="item"src="/image/shoe.png" alt="">
                         <p class="title">Shoe repair shop</p>
                         <p class="subtitle">Dr.Nelson's shoe repair shop branding</p>
                         </a>
-                        <a href="/shoerepair.html" class="shoerepair" >
+                        <a href="/description_page.html" class="shoerepair" >
                         <img class="item"src="/image/shoe.png" alt="">
                         <p class="title">Shoe repair shop</p>
                         <p class="subtitle">Dr.Nelson's shoe repair shop branding</p>
                         </a>
-                        <a href="/shoerepair.html" class="shoerepair" >
+                        <a href="/description_page.html" class="shoerepair" >
                         <img class="item"src="/image/shoe.png" alt="">
                         <p class="title">Shoe repair shop</p>
                         <p class="subtitle">Dr.Nelson's shoe repair shop branding</p>
                         </a>
-                        <a href="/shoerepair.html" class="shoerepair" >
+                        <a href="/description_page.html" class="shoerepair" >
                         <img class="item"src="/image/shoe.png" alt="">
                         <p class="title">Shoe repair shop</p>
                         <p class="subtitle">Dr.Nelson's shoe repair shop branding</p>
                         </a>
-                        <a href="/shoerepair.html" class="shoerepair" >
+                        <a href="/description_page.html" class="shoerepair" >
                         <img class="item"src="/image/shoe.png" alt="">
                         <p class="title">Shoe repair shop</p>
                         <p class="subtitle">Dr.Nelson's shoe repair shop branding</p>
