--- a/description_page.html
+++ b/description_page.html
@@ -9,7 +9,7 @@
     <script src="/jquery-3.2.1.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,400,500,700,900" rel="stylesheet">
 </head>
-<body id="second_page">
+<body id="description_page_body">
     <div class="container">
         <header>
             <a href="http://dothegee.org"><img src="/image/logo.svg" id="home_logo" alt=""></a>
