<figure>img</figure>

--- a/index.html
+++ b/index.html
@@ -33,18 +33,25 @@
                     <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
+               <div class="wrapper">
                <div id="main_slider">
                     <figure>
                         <img src="/image/shoe.png" alt="">
                         <img src="/image/watch.png" alt="">
                         <img src="/image/gird.png" alt="">
                         <img src="/image/shoe.png" alt="">
-<!--                        keyframes에서 첫번째 사진과 마지막사진은 동일한 사진으로 로테이션 효과를 준다.-->
                     </figure>
-            <aside>
-                
-            </aside>
-        </div>
+                </div>
+                       
+                        <img class="others" src="/image/shoe.png" alt="">
+                        <img class="others" src="/image/watch.png" alt="">
+                        </div>
+                        <div class="bottom">
+                            <div class="figure"><img class="the_others" src="/image/shoe.png" alt=""></div>
+                            <div class="figure"><img class="the_others" src="/image/shoe.png" alt=""></div>
+                            <div class="figure"><img class="the_others" src="/image/shoe.png" alt=""></div>
+                        </div>
+                </div>
         <footer>
             <p>© 2017  Eden. Designer & Web Developer.</p>
         </footer>
