사이간격 조정

--- a/index.html
+++ b/index.html
@@ -42,9 +42,10 @@
                         <img src="/image/shoe.png" alt="">
                     </figure>
                 </div>
-                       
+                       <div class="figure_1">
                         <img class="others" src="/image/shoe.png" alt="">
                         <img class="others" src="/image/watch.png" alt="">
+                        </div>
                         </div>
                         <div class="bottom">
                             <div class="figure"><img class="the_others" src="/image/shoe.png" alt=""></div>
