--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                <div class="wrapper">
                <div id="main_slider">
                     <figure>
-                        <img src="/image/shoe.png" alt="">
+                        <img src="/image/watch.png" alt="">
                         <img src="/image/watch.png" alt="">
                         <img src="/image/gird.png" alt="">
-                        <img src="/image/shoe.png" alt="">
+                        <img src="/image/watch.png" alt="">
                     </figure>
                 </div>
                        <div class="figure_1">
