미디어 쿼리 조정중

--- a/description_page.html
+++ b/description_page.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="/image/favicon.png" type="image/x-icon">
     <meta charset="UTF-8">
     <title>JINSOL_EDEN</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>@import url(/portfolio.css);</style>
     <script src="/jquery-3.2.1.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,400,500,700,900" rel="stylesheet">
@@ -13,7 +14,9 @@
     <div class="container">
         <header>
             <a href="http://dothegee.org"><img src="/image/logo.svg" id="home_logo" alt=""></a>
+            <a href="#" id="menu-icon"></a>
             <ul id="menu">
+             
             <li>
                 <a ng-href="about" href="about"> + About me </a>
             </li>
@@ -56,6 +59,14 @@
             <aside>
                 
             </aside>
+            <ul id="menu_2">
+            <li>
+                <a ng-href="about" href="about"> + About me </a>
+            </li>
+             <li>
+                <a href="mailto:dldrmak@naver.com" target="_blank">+ dldrmak@naver.com</a>
+            </li>
+            </ul>
         </div>
         <footer>
             <p>© 2017  Eden. Designer & Web Developer.</p>
