미디어 쿼리 실험

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="/jquery-3.2.1.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,400,500,700,900" rel="stylesheet">
 </head>
-<body id="second_page_body">
+<body id="main_page_body">
     <div class="container">
         <header>
             <a href="http://dothegee.org"><img src="/image/logo.svg" id="home_logo" alt=""></a>
@@ -21,9 +21,7 @@
                 <a href="mailto:dldrmak@naver.com" target="_blank">+ dldrmak@naver.com</a>
             </li>
         </ul>
-        </header>
-        <div class="contants">
-            <nav>
+        <nav>
                <a href="#" id="menu-icon"></a>
                 <ul>  
                     <li><a href="#">Editorial</a></li>
@@ -34,6 +32,8 @@
                     <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
+        </header>
+        <div class="contants">
                 <div id="slider">
                         <a href="/description_page.html" class="shoerepair" >
                         <img class="item"src="/image/shoe.png" alt="">
