head 미디어 쿼리 부분 추

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="/image/favicon.png" type="image/x-icon">
     <meta charset="UTF-8">
     <title>JINSOL_EDEN</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>@import url(/portfolio.css);</style>
     <script src="/jquery-3.2.1.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,400,500,700,900" rel="stylesheet">
