--- a/description_page.html
+++ b/description_page.html
@@ -72,6 +72,7 @@
             <p>© 2017  Eden. Designer & Web Developer.</p>
         </footer>
     </div>
-    <script src="/javascript.js"></script>
 </body>
+<script src="/javascript.js"></script>
+    <script src="mune.js"></script>
 </html>
