--- a/index.html
+++ b/index.html
@@ -93,6 +93,8 @@
             <p>© 2017  Eden. Designer & Web Developer.</p>
         </footer>
     </div>
-    <script src="/javascript.js"></script>
+    
 </body>
+<script src="/javascript.js"></script>
+    <script src="mune.js"></script>
 </html>
